Masnejo de excepciones agregado , y mostrar matriculos cuando se le asocia un barco , y arrgelo de bug